# mx-vm-executor-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflow/: libvmexeccapi-build.yml
.github/workflows/: libvmexeccapi-build-linux-arm64.yml  libvmexeccapi-build.yml  rust-ci.yml
Docker/: arm64.dockerfile
c-api/: Cargo.toml  libvmexeccapi.h
c-api/src/: basic_types.rs  capi_breakpoints.rs  capi_error.rs  capi_executor.rs  capi_instance.rs  capi_instance_cache.rs  capi_logger.rs  capi_memory.rs  capi_metering.rs  capi_vm_hook_pointers.rs  capi_vm_hooks.rs  lib.rs  macros.rs  service_singleton.rs
exec-c-api/: Cargo.toml  build.rs  libvmexeccapi.h
exec-c-api/src/: basic_types.rs  capi_breakpoint.rs  capi_breakpoints.rs  capi_error.rs  capi_executor.rs  capi_instance.rs  capi_instance_cache.rs  capi_logger.rs  capi_memory.rs  capi_metering.rs  capi_signals.rs  capi_vm_hook_pointers.rs  capi_vm_hooks.rs  error.rs  import.rs  instance.rs  lib.rs  macros.rs  service_singleton.rs  signals.rs  value.rs
exec-service/: Cargo.toml  elrondcapi.h
exec-service-wasmer/: Cargo.toml  wasmer.h
exec-service-wasmer/src/: basic_exec.rs  lib.rs  wasmer_breakpoint.rs  wasmer_breakpoints.rs  wasmer_context.rs  wasmer_convert.rs  wasmer_env.rs  wasmer_executor.rs  wasmer_helpers.rs  wasmer_imports.rs  wasmer_instance.rs  wasmer_logger.rs  wasmer_metering.rs  wasmer_metering_costs.rs  wasmer_metering_helpers.rs  wasmer_opcode_control.rs  wasmer_opcode_tracer.rs  wasmer_protected_globals.rs  wasmer_service.rs  wasmer_vm_hooks.rs
exec-service-wasmer/tests/: endpoints_test.rs
exec-service-wasmer/tests/common/: mod.rs  test_instance.rs
exec-service/src/: breakpoint_value.rs  executor.rs  func.rs  instance.rs  lib.rs  opcode_cost.rs  service_error.rs  service_trait.rs  vm_hooks.rs
meta/: Cargo.toml
meta/src/: lib.rs
minimal-capi-example/: README.md
minimal-capi-example/elrond-wasmer-go/: .gitignore  Makefile  capiprototype.h  elrond-wasmer-go  go.mod  main_shared.go
minimal-capi-example/elrond-wasmer-lib/: Cargo.toml  wasmer.h
minimal-capi-example/elrond-wasmer-lib/src/: lib.rs  run_contract.rs
vm-executor/: Cargo.toml  README.md
vm-executor-experimental/: Cargo.toml  README.md
vm-executor-experimental/src/: lib.rs  middlewares.rs  new_cyclic_fallible.rs  wasmer_opcode_trace.rs  we_breakpoints.rs  we_error.rs  we_executor.rs  we_helpers.rs  we_imports.rs  we_instance.rs  we_instance_state.rs  we_metering.rs  we_opcode_control.rs  we_opcode_trace.rs  we_protected_globals.rs  we_vm_hooks.rs  we_vm_hooks_builder.rs
vm-executor-experimental/src/middlewares/: we_breakpoints.rs  we_metering.rs  we_metering_helpers.rs  we_opcode_control.rs  we_opcode_cost.rs  we_opcode_trace.rs  we_protected_globals.rs  we_protected_globals_trait.rs
vm-executor-experimental/tests/common/: test_instance.rs  test_wat.rs
vm-executor-wasmer/: Cargo.toml  README.md
vm-executor-wasmer/src/: lib.rs  new_traits.rs  wasmer_breakpoints.rs  wasmer_executor.rs  wasmer_helpers.rs  wasmer_imports.rs  wasmer_instance.rs  wasmer_instance_state.rs  wasmer_metering.rs  wasmer_metering_helpers.rs  wasmer_opcode_control.rs  wasmer_opcode_cost.rs  wasmer_protected_globals.rs  wasmer_service.rs  wasmer_vm_hooks.rs
vm-executor-wasmer/src/new_traits/: wasmer_error.rs  wasmer_prod_executor.rs  wasmer_prod_instance.rs  wasmer_prod_instance_state.rs
vm-executor-wasmer/tests/: opcode_version_test.rs
vm-executor-wasmer/tests/common/: test_instance.rs  test_wat_bad.rs
vm-executor-wasmer5/: Cargo.toml
vm-executor-wasmer5/src/: lib.rs  vibe_instance.rs  wasmer5_imports.rs  wasmer_breakpoints.rs  wasmer_executor.rs  wasmer_imports.rs  wasmer_instance.rs  wasmer_instance_state.rs  wasmer_instance_state_2.rs  wasmer_logger.rs  wasmer_metering.rs  wasmer_metering_helpers.rs  wasmer_opcode_control.rs  wasmer_opcode_trace.rs  wasmer_protected_globals.rs  wasmer_service.rs  wasmer_vm_hooks.rs  wasmer_vm_hooks_builder.rs
vm-executor-wasmer5/tests/common/: test_instance.rs
vm-executor/src/: breakpoint_value.rs  compilation_options.rs  executor.rs  instance.rs  instance_new.rs  instance_state.rs  lib.rs  missing_wasm.rs  new_traits.rs  opcode_check_used.rs  opcode_config.rs  opcode_cost.rs  opcode_version.rs  schedule.rs  service_trait.rs  vh_hooks_legacy_adapter.rs  vm_hooks.rs  vm_hooks_builder.rs  vm_hooks_early_exit.rs  vm_hooks_legacy_adapter.rs  vm_hooks_new.rs
vm-executor/src/new_traits/: breakpoint_value_new.rs  compilation_options_new.rs  executor_new.rs  instance_new.rs  instance_state.rs  vm_hooks_early_exit.rs  vm_hooks_legacy_adapter.rs  vm_hooks_new.rs
vm-executor/tests/: deserialization_from_file_test.rs
