[package]
name = "elrond-vm-exec-c-api"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elrond-exec-service = { path = "../exec-service" }
elrond-exec-service-wasmer = { path = "../exec-service-wasmer" }

lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }

env_logger = "0.8.4"
log = "0.4.14"

[build-dependencies]
cbindgen = "0.9"
