[package]
name = "multiversx-vm-executor-wasmer"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
multiversx-vm-executor = { path = "../exec-service" }

wasmer = { git = "https://github.com/multiversx/wasmer", rev = "b9f401730", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }
wasmer-types = { git = "https://github.com/multiversx/wasmer", rev = "b9f401730" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
