[package]
name = "multiversx-vm-executor-wasmer"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
multiversx-vm-executor = { path = "../exec-service" }

wasmer = { path = "../../wasmer/lib/api" , default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }
wasmer-vm = { path = "../../wasmer/lib/vm" }
wasmer-types = { path = "../../wasmer/lib/types"  }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
