[package]
name = "multiversx-vm-executor-wasmer"
version = "0.0.1"
edition = "2021"

[lib]

[dependencies]
multiversx-vm-executor = { path = "../exec-service" }

wasmer = { git = "https://github.com/multiversx/wasmer", rev = "a3e2bc6a34a45a9a1e880c7f0ff666c735cbdadd", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }
wasmer-vm = { git = "https://github.com/multiversx/wasmer", rev = "a3e2bc6a34a45a9a1e880c7f0ff666c735cbdadd" }
wasmer-types = { git = "https://github.com/multiversx/wasmer", rev = "a3e2bc6a34a45a9a1e880c7f0ff666c735cbdadd" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
