[package]
name = "multiversx-chain-vm-executor"
version = "0.1.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "Ovidiu Stinga <ovidiu.stinga@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-vm-executor-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM executor interface"
keywords = ["multiversx", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies]
enumset = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
typetag = { version = "0.1", optional = true }
paste = "1.0"
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.14"
