[package]
name = "multiversx-chain-vm-executor-wasmer-experimental"
version = "0.3.0"
edition = "2021"
publish = false # will also be published, but it is not yet ready for that

[lib]

[dependencies.multiversx-chain-vm-executor]
version = "0.3.0"
path = "../vm-executor"

[dependencies]
wasmer = { version = "6.0", default-features = false, features = [
    "singlepass",
    "sys",
    "wat",
] }
wasmer-types = "6.0"

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
rc-new-cyclic-fallible = "1.0.0"
thiserror = "2.0"
