[package]
name = "multiversx-chain-vm-executor-wasmer-experimental"
version = "0.5.1"
edition = "2024"

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-vm-executor-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM Wasmer adapter (experimental)"
keywords = ["multiversx", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies.multiversx-chain-vm-executor]
version = "0.5.1"
path = "../vm-executor"

[dependencies]
home = "=0.5.1" # downgrading, >= 0.5.2 requires rustc 1.88, which is causing linker problems on Linux
wasmer = { version = "6.1", default-features = false, features = [
    "singlepass",
    "sys",
    "wat",
] }
wasmer-types = "6.1"

log = "0.4"
loupe = "0.1.3"
rc-new-cyclic-fallible = "1.0.0"
thiserror = "2.0"
