[package]
name = "multiversx-chain-vm-executor-wasmer"
version = "0.5.1"
edition = "2024"
publish = false # cannot publish while still working with unpublished wasmer fork

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-vm-executor-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM Wasmer adapter (production)"
keywords = ["multiversx", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies.multiversx-chain-vm-executor]
version = "0.5.1"

[dependencies]
home = "=0.5.1" # downgrading, >= 0.5.2 requires rustc 1.88, which is causing linker problems on Linux
wasmer = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3" }
wasmer-types = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3" }

log = "0.4"
loupe = "0.1.3"
thiserror = "2.0"
