[package]
name = "multiversx-chain-vm-executor-wasmer"
version = "0.5.1"
edition = "2024"
publish = false # cannot publish while still working with unpublished wasmer fork

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-vm-executor-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM Wasmer adapter (production)"
keywords = ["multiversx", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies.multiversx-chain-vm-executor]
# Not setting the path = "../vm-executor" here, because it would break
# external consumers, which import it via gir revision. The path is overridden
# in the workspace Cargo.toml via [patch.crates-io].
version = "0.5.1"

[dependencies]
wasmer = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3" }
wasmer-types = { git = "https://github.com/multiversx/wasmer", rev = "73f2111abf85700dec4f11fb23ece01abc2065e3" }

log = { version = "0.4", features = ["std"] }
loupe = "0.1.3"
thiserror = "2.0"
