[package]
name = "multiversx-chain-vm-executor"
version = "0.2.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "Ovidiu Stinga <ovidiu.stinga@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-vm-executor-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM executor interface"
keywords = ["multiversx", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

